export const snapshot = {};

snapshot[`tuple 1`] = `
{
  additionalProperties: false,
  properties: {
    "0": {
      type: "boolean",
    },
    "1": {
      type: "number",
    },
    "2": {
      type: "string",
    },
  },
  required: [
    "0",
    "1",
    "2",
  ],
  type: "object",
}
`;

snapshot[`tuple 2`] = `
{
  additionalProperties: false,
  description: "One.",
  properties: {
    "0": {
      type: "boolean",
    },
    "1": {
      type: "number",
    },
    "2": {
      type: "string",
    },
  },
  required: [
    "0",
    "1",
    "2",
  ],
  type: "object",
}
`;

snapshot[`tuple 3`] = `
{
  additionalProperties: false,
  description: "Two. One.",
  properties: {
    "0": {
      type: "boolean",
    },
    "1": {
      type: "number",
    },
    "2": {
      type: "string",
    },
  },
  required: [
    "0",
    "1",
    "2",
  ],
  type: "object",
}
`;
